The coding was not getting the extra values correctly.